src/css/vertical-layout-light/_setting.scss
/* ... */
.jotlogo-header {
  width: 20%;
  padding-top: 4px;
  background: #ffff;
  padding: 6px;
}

.jotlogo-width {
  width: 300px;
  background: #F4F5F7;
  height: 64px;
}

.preview-div-switch {
  width: 182px;
  margin-left: 57px;
}

.link_c {
  left: 10px;
  top: 6px;
}

.copy_button {
  margin-left: 10px;
}

.selected_div {
  background-color: #A0ABB2;
  height: 28px;
  width: 55px;
  border-radius: 20px;

}

.abs_div {
  background-color: white;
  height: 33px;
  width: 33px;
  border-radius: 100%;
  left: -5px;
  top: -2px;
}

.form-control {
  padding-left: 40px;
}

.accordian {
  background-color: blue;
  border-color: blue;
  border-radius: 100%;
}

.heading_css {
  color: #dc143c !important;
  margin-left: 5px !important;
  font-size: 16px !important;
}

.succes {
  background-color: #ff8a36;
  height: 90px;
}

.background {
  background-color: #ff8a36;

}

.standard {
  background-color: #fafafa;
}

.ut {
  height: 90px;
}

.bg_succes {
  background-color: #78BB07;
}

.autom {
  color: #78BB07;
}

.mat {
  font-size: 14px;
}

.mt {
  height: 93px;
}

.heading_6 {
  font-size: 14px;
}

.mainpage {
  display: none;
}

.mainpage:hover {
  display: block !important;
}

.primar {
  background-color: #E0D7D7;
  border-radius: 100%;
}

.Padding_space {
  padding-left: 240px;
}

.padd_l {
  padding-left: 140px;
}

.nav_div {
  background-color: #ffffff;
}

.text_design:hover {
  border-bottom: 3px;
  border-color: #4811df;
}

.new_icon_3 {
  left: 96%;
  top: 10px;
}

.border-setup {
  height: 42px;
  width: 0.5px;
}

.shown {
  background-color: #09f;
}

.fs_6 {
  font-size: 12px;
}

.border_aggut {
  padding-right: 240px;
  padding-top: 5px !important;
  padding-bottom: 5px !important;
}

.dropdown-center {
  margin-left: 150px;
}

// .btn{

// }
// .css-1s2u09g-control {
//   padding-right: 200px !important;
//   padding-left: 200px !important;
// }

.Main_bg:hover {
  background-color: #09f !important;
  color: #ffffff !important;

}

.Main_bg p {
  color: inherit;
}

.Main_bg_green:hover {
  background-color: #58b966 !important;
  color: #ffffff !important;
}

.Main_bg_green p {
  color: inherit;
}

.Main_bg_violet:hover {
  background-color: #b559d4 !important;
  color: #ffffff !important;
}

.Main_bg_violet p {
  color: inherit;
}

.enda {
  background-color: #c8cced;
  height: 20px;
  width: 20px;
  border-radius: 100%;
  margin-bottom: 10px;
}

.dropi {
  padding-left: 6px;
  margin-bottom: 3px;
}

.enda:hover {
  background-color: #f5f5f5;
}

/* css 01/Aug/22 */
.set_margin {
  margin: 60px 0px 0px 220px;
}

// .icon_margin{
//   margin-left: 20px;
// }
.input_date {
  padding-left: 20px !important;
}

.notify-btn {
  background: #dc143c;
  border: 1px solid #dc143c;
  color: #fff;
  border-radius: 4px;
  padding: 7px;
  padding-right: 14px;
  padding-left: 14px;
}

.back-btn-in {
  background: #dc143c;
  border: 1px solid #dc143c;
  color: #fff;
  border-radius: 4px;
  padding: 6px;
  padding-right: 12px;
  padding-left: 12px;
}

.border-dotted {
  border: 2px dashed gray;
}

.thankyou-div {
  padding-left: 12px;
  padding-top: 1px;
}

.date-width {
  width: 50%;
}

.authenticate-input {
  width: 60%;
  border: 1px solid #c5c5c5;
  border-radius: 4px !important;
  padding: 6px 12px;
  box-shadow: 0 2px 4px rgb(86 70 50 / 10%);
  border: 1px solid #d9cec1;
  color: #564632;
  font-family: inherit;
  line-height: 24px;
  font-size: 14px;
  display: inline-block;
  background-color: #fff;
  outline: 0;
}

.form-set-main-div {
  width: 69%;
  background: #ffffff;
  border: 1px solid #f2f2f2;
  border-radius: 4px;
  box-shadow: inset 0 0 1px 0 #bfbfbf;
}

.form-set-right-div {
  padding-left: 12px;
  padding-top: 1px;
}

.mr-top {
  margin-top: 65px;
}

.condition_margin_adjust {
  margin: 0px 0px 0px 220px;
}

.time-select-width {
  width: 100%;
}

.form_change {
  width: 78% !important;
  padding: 0.375rem 1.75rem !important;
}

.form-control-padding {
  padding: 0.375rem 2.75rem !important;
}

.page-content-padding {
  padding-left: 48px !important;
}

.condition-first-input {
  width: 100%;
  border: 1px solid #c5c5c5;
  border-radius: 4px !important;
  padding: 6px 12px;
  box-shadow: 0 2px 4px rgb(86 70 50 / 10%);
  border: 1px solid #d9cec1;
  color: #564632;
  font-family: inherit;
  line-height: 24px;
  font-size: 14px;
  display: inline-block;
  background-color: #fff;
  outline: 0;
}

.condition-first-input:focus {
  border: 2px solid black !important;
}

.width_show_field {
  width: 100%;
  margin-left: 120px;
}

.show_field_adjust {
  width: 100%;
  margin-left: 77px;
}

.show_field_do {
  width: 100%;
  margin-left: 108px;
}

.show_field_option {
  width: 100%;
  margin-left: 80px;
}

.show_field_page {
  width: 100%;
  margin-left: 84px;
}

.date_schedule {
  border: 1px solid #ced4da;
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
  overflow: hidden;
  text-align: left;
  padding: 6px 6px 6px 10px;
}

.select_dark {
  background: rgb(30, 40, 61) !important;
  border: 1px solid #ced4da !important;
  color: #fff !important;
}

.border-theme {
  border: 1px solid #dc143c !important;
}

.bg-icon-color {
  background-color: #dc143c !important;
}

.heading_5 {
  font-size: 16px;
  font-weight: bold;
}

.condition-title {
  font-size: 16px;
  margin-bottom: 2px;
  font-weight: 500;
}

.para-green {
  color: #dc143c;
}

.skip-icon-color {
  background-color: #58b966;
}

.email-icon-color {
  background-color: #b559d4;
}

.pdf-download-btn {
  background-color: #dc143c;
  border: 1px solid #dc143c;
  color: #ffffff;
}

.pdf-download-btn:hover {
  background-color: #f52b54;
  border: 1px solid #f52b54;
}

.date-enter-value:focus {
  border: 1px solid #000000 !important;
  box-shadow: none !important;
}


.jotformnav-desk {
  display: flex;
}

.jotformnav-Mob {
  display: block;
}

.preview-position{
  position: relative;
  left: 27px;
  top: 3px;
}
.notify-para1 {
    font-size: 13px;
    margin-bottom: 0;
    color: #ffffff;
}
/* ... */

